// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphQL mutation login 1`] = `
Object {
  "data": Object {
    "login": Object {
      "__typename": "Login",
      "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6MSwicGFzc3dvcmQiOiJlM2IwYzQ0Mjk4ZmMxYzE0OWFmYmY0Yzg5OTZmYjkyNDI3YWU0MWU0NjQ5YjkzNGNhNDk1OTkxYjc4NTJiODU1IiwiaWF0IjoxNTg3NjAzNTc2LCJleHAiOjE1ODc2MDk1NzZ9.xqHM4PzUXbJgohVjgfHWVzgum6Jd66pLzfWbNUD8QVA",
      "user": Object {
        "__typename": "User",
        "info": "{}",
        "name": "admin",
      },
    },
  },
}
`;

exports[`GraphQL mutation login 2`] = `
Object {
  "data": Object {
    "currentUser": Object {
      "__typename": "User",
      "id": 1,
      "info": "{}",
      "name": "admin",
    },
  },
  "loading": false,
  "networkStatus": 7,
  "stale": false,
}
`;
